Revert "add popup to config contract"
