# libs/common/src/api/mykomap-openapi.json
@@ -966,146 +966,6 @@
                       "required": [
                         "directory_panel_field"
                       ]
-                    },
-                    "popup": {
-                      "type": "object",
-                      "properties": {
-                        "titleProp": {
-                          "type": "string"
-                        },
-                        "left-pane": {
-                          "type": "array",
-                          "items": {
-                            "type": "object",
-                            "properties": {
-                              "itemProp": {
-                                "type": "string"
-                              },
-                              "valueStyle": {
-                                "default": "text",
-                                "type": "string",
-                                "enum": [
-                                  "text",
-                                  "address",
-                                  "hyperlink"
-                                ]
-                              },
-                              "showBullets": {
-                                "default": false,
-                                "type": "boolean"
-                              },
-                              "singleColumnLimit": {
-                                "type": "number"
-                              },
-                              "showLabel": {
-                                "default": false,
-                                "type": "boolean"
-                              },
-                              "hyperlinkBaseUri": {
-                                "default": "",
-                                "type": "string"
-                              },
-                              "displayText": {
-                                "default": "",
-                                "type": "string"
-                              }
-                            },
-                            "required": [
-                              "itemProp"
-                            ]
-                          }
-                        },
-                        "top-right-pane": {
-                          "type": "array",
-                          "items": {
-                            "type": "object",
-                            "properties": {
-                              "itemProp": {
-                                "type": "string"
-                              },
-                              "valueStyle": {
-                                "default": "text",
-                                "type": "string",
-                                "enum": [
-                                  "text",
-                                  "address",
-                                  "hyperlink"
-                                ]
-                              },
-                              "showBullets": {
-                                "default": false,
-                                "type": "boolean"
-                              },
-                              "singleColumnLimit": {
-                                "type": "number"
-                              },
-                              "showLabel": {
-                                "default": false,
-                                "type": "boolean"
-                              },
-                              "hyperlinkBaseUri": {
-                                "default": "",
-                                "type": "string"
-                              },
-                              "displayText": {
-                                "default": "",
-                                "type": "string"
-                              }
-                            },
-                            "required": [
-                              "itemProp"
-                            ]
-                          }
-                        },
-                        "bottom-right-pane": {
-                          "type": "array",
-                          "items": {
-                            "type": "object",
-                            "properties": {
-                              "itemProp": {
-                                "type": "string"
-                              },
-                              "valueStyle": {
-                                "default": "text",
-                                "type": "string",
-                                "enum": [
-                                  "text",
-                                  "address",
-                                  "hyperlink"
-                                ]
-                              },
-                              "showBullets": {
-                                "default": false,
-                                "type": "boolean"
-                              },
-                              "singleColumnLimit": {
-                                "type": "number"
-                              },
-                              "showLabel": {
-                                "default": false,
-                                "type": "boolean"
-                              },
-                              "hyperlinkBaseUri": {
-                                "default": "",
-                                "type": "string"
-                              },
-                              "displayText": {
-                                "default": "",
-                                "type": "string"
-                              }
-                            },
-                            "required": [
-                              "itemProp"
-                            ]
-                          }
-                        }
-                      },
-                      "required": [
-                        "titleProp",
-                        "left-pane",
-                        "top-right-pane",
-                        "bottom-right-pane"
-                      ]
                     }
                   },
                   "required": [
